--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -1,14 +1,14 @@
 @import '../../baseStyle.scss';
 
 .sideBarWrapper {
-  @include flexLayoutWithGap(column, center, flex-start, 1rem);
+  @include flexLayoutWithGap(column, center, flex-start, 1.4rem);
   width: 100%;
   height: 100%;
 
   .userInfoContainer {
     @include flexLayoutWithGap(row, center, center, 1rem);
     width: 100%;
-    height: 100px;
+    height: 130px;
     border-bottom: 1px solid rgb(238, 238, 238);
 
     .userProfileImage {
@@ -61,13 +61,13 @@
   }
 
   .userUiKits {
-    @include flexLayoutWithGap(column, center, flex-start, 1rem);
+    @include flexLayoutWithGap(column, center, flex-start, 1.3rem);
     width: 100%;
 
     .kit-label {
       width: 90%;
       text-align: start;
-      font-size: 9px;
+      font-size: 8px;
       font-weight: bold;
       color: #999;
     }
